Only update VR controller states if connected

Only updates the VR controller's previous button states if the
controller is connected. This fixes some flakiness with VR tests caused
by the controller briefly disconnecting then reconnecting.

Bug: 870031
Change-Id: If1e0e8807120e9ddba94c05b651ae553b1e4f60b
Reviewed-on: https://chromium-review.googlesource.com/1159273
Reviewed-by: Aldo Culquicondor <acondor@chromium.org>
Reviewed-by: Amirhossein Simjour <asimjour@chromium.org>
Commit-Queue: Brian Sheedy <bsheedy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580609}
Former-commit-id: 04d2f0f8ddf85bb106eb43e2b9a9ee3d8754a529